--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .App {
   flex-direction: column;
   flex: 1; }
-  .App .PostsList {
-    margin-left: 135px;
-    padding-top: 60px;
-    max-width: 800px; }
+
+.App .PostsList {
+  padding-top: 60px;
+  max-width: 800px; }
+
+.Inner {
+  margin: 0 auto;
+  width: 1200px; }
+
+* {
+  outline: 1px solid rgba(0, 0, 0, 0.1); }
