--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,16 @@
 	flex-direction: column;
 	flex: 1;
 	.PostsList {
-		margin-left: 135px;
 		padding-top: 60px;
 		max-width: 800px;
 	}
+}
+
+.Inner {
+  margin: 0 auto;
+  width: 1200px;
+}
+
+* {
+  outline: 1px solid rgba(0,0,0,0.1)
 }
