--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -13,9 +13,22 @@
 			max-width: 100%;
 			height: auto;
 		}
-		.alignright {
-			float: right;
-		}
+    .alignleft {
+    	display: inline;
+    	float: left;
+    	margin-right: 1.5em;
+    }
+    .alignright {
+    	display: inline;
+    	float: right;
+    	margin-left: 1.5em;
+    }
+    .aligncenter {
+    	clear: both;
+    	display: block;
+    	margin-left: auto;
+    	margin-right: auto;
+    }
 		> p:first-child {
 			margin-top: 0;
 		}
