--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -3,5 +3,5 @@
   background-color: #CB4B3C;
   background-position: center center;
   background-repeat: no-repeat;
-  width: 60px;
-  height: 60px; }
+  height: 60px;
+  width: 60px; }
