--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,8 @@
   margin: 0 auto;
   width: 1200px; }
 
+/*
 * {
-  outline: 1px solid rgba(0, 0, 0, 0.1); }
+  outline: 1px solid rgba(0,0,0,0.1)
+}
+*/
