--- a/src/components/HeaderButton.css
+++ b/src/components/HeaderButton.css
@@ -1,10 +1,17 @@
 .HeaderButton {
+  display: block;
   background: #EAECE6;
-  color: #818181;
+  color: #BDC0B6;
   height: 60px;
   width: 180px;
   text-transform: uppercase;
   font-weight: 600;
   line-height: 60px;
   text-align: center;
-  margin-left: 40px; }
+  margin-left: 35px;
+  cursor: pointer;
+  transition: 180ms linear all; }
+
+.HeaderButton:hover {
+  color: #818181;
+  background: #F1F2EE; }
