--- a/src/components/HeaderButton.scss
+++ b/src/components/HeaderButton.scss
@@ -1,11 +1,19 @@
 .HeaderButton {
+  display: block;
 	background: #EAECE6;
-  color: #818181;
+  color: #BDC0B6;
 	height: 60px;
 	width: 180px;
   text-transform: uppercase;
   font-weight: 600;
   line-height: 60px;
   text-align: center;
-  margin-left: 40px;
+  margin-left: 35px;
+  cursor: pointer;
+  transition: 180ms linear all;
+
+  &:hover {
+    color: #818181;
+    background: #F1F2EE;
+  }
 }
