--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -2,11 +2,31 @@
   margin-right: 35px; }
 
 .Post .body {
-  flex-direction: column; }
+  flex-direction: column;
+  font-family: 'Adelle Sans W01', serif; }
+
+.Post .body > h2 {
+  font-family: 'Chronicle Display';
+  font-size: 42px;
+  margin-top: 5px; }
 
 .Post .content {
   display: block;
-  line-height: 33px; }
+  line-height: 1.8;
+  font-size: 18px;
+  font-weight: 100;
+  letter-spacing: 0.01rem;
+  color: #636462; }
+
+.Post .content a {
+  text-decoration: none;
+  padding-left: 2px;
+  padding-right: 2px;
+  font-weight: 200;
+  box-shadow: inset 0 17px 0 0 #fff, inset 0 -15px 0 0 rgba(125, 195, 204, 0.1); }
+
+.Post .content strong {
+  font-weight: 300; }
 
 .Post .content img {
   max-width: 100%;
@@ -31,8 +51,8 @@
 .Post .content > p:first-child {
   margin-top: 0; }
 
-.Post h2 {
-  font-family: "Chronicle Display";
-  font-size: 48px;
+.Post .content h2 {
+  font-size: 32px;
+  font-weight: 500;
   margin: 0 0 35px;
   line-height: 60px; }
