--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -4,10 +4,30 @@
 	}
 	.body {
 		flex-direction: column;
+    font-family: 'Adelle Sans W01', serif;
+    > h2 {
+      font-family: 'Chronicle Display';
+      font-size: 42px;
+      margin-top: 5px;
+    }
 	}
 	.content {
 		display: block;
-		line-height: 33px;
+		line-height: 1.8;
+    font-size: 18px;
+    font-weight: 100;
+    letter-spacing: 0.01rem;
+    color: #636462;
+    a {
+      text-decoration: none;
+      padding-left: 2px;
+      padding-right: 2px;
+      font-weight: 200;
+      box-shadow: inset 0 17px 0 0 #fff, inset 0 -15px 0 0 fade-out(#7DC3CC, 0.9);
+    }
+    strong {
+      font-weight: 300;
+    }
 		img {
 			max-width: 100%;
 			height: auto;
@@ -31,12 +51,11 @@
 		> p:first-child {
 			margin-top: 0;
 		}
+    h2 {
+      font-size: 32px;
+      font-weight: 500;
+      margin: 0 0 35px;
+      line-height: 60px;
+    }
 	}
-	h2 {
-		font-family: "Chronicle Display";
-		font-size: 48px;
-		margin: 0 0 35px;
-		line-height: 60px;
-	}
-
 }
