--- a/src/components/PostsList.scss
+++ b/src/components/PostsList.scss
@@ -1,5 +1,17 @@
 .PostsList {
 	flex-direction: column;
+	position: relative;
+	padding-top: 100px;
+	&:before {
+		position: absolute;
+		content: '';
+		background: #F1F2EE;
+		left: 32px;
+		height: 100px;
+		top: 0;
+		width: 5px;
+		z-index: -1;
+	}
 	.Status {
 
 	}
