--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -3,86 +3,74 @@
   position: relative;
   padding-bottom: 20px;
   min-height: 144px; }
-
-.Post:before {
-  position: absolute;
-  content: '';
-  left: 32px;
-  top: 70px;
-  height: 40px;
-  width: 40px;
-  border-radius: 0 0 0 40px;
-  border-left: 5px solid #F1F2EE;
-  border-bottom: 5px solid #F1F2EE; }
-
-.Post:after {
-  position: absolute;
-  content: '';
-  left: 32px;
-  bottom: 0px;
-  height: 60px;
-  width: 60px;
-  border-radius: 60px 0 0 0;
-  border-top: 5px solid #F1F2EE;
-  border-left: 5px solid #F1F2EE; }
-
-.Post .Avatar {
-  margin-right: 30px; }
-
-.Post .body {
-  flex-direction: column;
-  font-family: 'Adelle Sans W01', serif; }
-
-.Post .body > h2 {
-  font-family: 'Chronicle Display';
-  font-size: 42px;
-  margin-top: 5px; }
-
-.Post .content {
-  display: block;
-  line-height: 1.9;
-  font-size: 18px;
-  font-weight: 100;
-  letter-spacing: 0.01rem;
-  color: #636462; }
-
-.Post .content a {
-  text-decoration: none;
-  padding-left: 2px;
-  padding-right: 2px;
-  font-weight: 200;
-  box-shadow: inset 0 17px 0 0 #fff, inset 0 -15px 0 0 rgba(125, 195, 204, 0.1); }
-
-.Post .content strong {
-  font-weight: 300; }
-
-.Post .content img {
-  max-width: 100%;
-  height: auto; }
-
-.Post .content .alignleft {
-  display: inline;
-  float: left;
-  margin-right: 1.5em;
-  margin-bottom: 1em; }
-
-.Post .content .alignright {
-  display: inline;
-  float: right;
-  margin-left: 1.5em;
-  margin-bottom: 1em; }
-
-.Post .content .aligncenter {
-  clear: both;
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
-
-.Post .content > p:first-child {
-  margin-top: 0; }
-
-.Post .content h2 {
-  font-size: 32px;
-  font-weight: 500;
-  margin: 0 0 35px;
-  line-height: 60px; }
+  .Post:before {
+    position: absolute;
+    content: '';
+    left: 32px;
+    top: 70px;
+    height: 40px;
+    width: 40px;
+    border-radius: 0 0 0 40px;
+    border-left: 5px solid #F1F2EE;
+    border-bottom: 5px solid #F1F2EE; }
+  .Post:after {
+    position: absolute;
+    content: '';
+    left: 32px;
+    bottom: 0px;
+    height: 60px;
+    width: 60px;
+    border-radius: 60px 0 0 0;
+    border-top: 5px solid #F1F2EE;
+    border-left: 5px solid #F1F2EE; }
+  .Post .Avatar {
+    margin-right: 30px; }
+  .Post .body {
+    flex-direction: column;
+    font-family: 'Adelle Sans W01', serif;
+    word-wrap: break-word;
+    word-break: break-word; }
+    .Post .body > h2 {
+      font-family: 'Chronicle Display';
+      font-size: 42px;
+      margin-top: 5px; }
+  .Post .content {
+    display: block;
+    line-height: 1.9;
+    font-size: 18px;
+    font-weight: 100;
+    letter-spacing: 0.01rem;
+    color: #636462; }
+    .Post .content a {
+      text-decoration: none;
+      padding-left: 2px;
+      padding-right: 2px;
+      font-weight: 200;
+      box-shadow: inset 0 17px 0 0 #fff, inset 0 -15px 0 0 rgba(125, 195, 204, 0.1); }
+    .Post .content strong {
+      font-weight: 300; }
+    .Post .content img {
+      max-width: 100%;
+      height: auto; }
+    .Post .content .alignleft {
+      display: inline;
+      float: left;
+      margin-right: 1.5em;
+      margin-bottom: 1em; }
+    .Post .content .alignright {
+      display: inline;
+      float: right;
+      margin-left: 1.5em;
+      margin-bottom: 1em; }
+    .Post .content .aligncenter {
+      clear: both;
+      display: block;
+      margin-left: auto;
+      margin-right: auto; }
+    .Post .content > p:first-child {
+      margin-top: 0; }
+    .Post .content h2 {
+      font-size: 32px;
+      font-weight: 500;
+      margin: 0 0 35px;
+      line-height: 60px; }
