--- a/src/components/Status.css
+++ b/src/components/Status.css
@@ -13,14 +13,5 @@
   .Status .Avatar {
     margin-right: 35px;
     margin-left: 10px; }
-  .Status .body {
-    font-family: "Proxima Nova";
-    display: block;
-    margin-top: 10px;
-    font-size: 18px;
-    line-height: 33px; }
-    .Status .body p:first-of-type {
-      display: inline; }
-    .Status .body img {
-      max-width: 100%;
-      height: auto; }
+  .Status .PostContent p:first-of-type {
+    display: inline; }
