--- a/src/components/Status.scss
+++ b/src/components/Status.scss
@@ -15,18 +15,9 @@
 		margin-right: 35px;
 		margin-left: 10px;
 	}
-	.body {
-		font-family: "Proxima Nova";
-		display: block;
-		margin-top: 10px;
-		font-size: 18px;
-		line-height: 33px;
+	.PostContent {
 		p:first-of-type {
 			display: inline;
-		}
-		img {
-			max-width: 100%;
-			height: auto;
 		}
 	}
 }
