--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -18,17 +18,21 @@
 		position: absolute;
 		content: '';
 		left: 32px;
-		bottom: 0px;
+		bottom: -40px;
 	    height:60px;
 	    width: 60px;
 	    border-radius: 60px 0 0 0;
 		border-top: 5px solid #F1F2EE;
 		border-left: 5px solid #F1F2EE;
 	}
-	.Avatar {
+	> div > .Avatar {
 		margin-right: 30px;
 	}
-	.body {
+	> div > .body {
 		flex-direction: column;
+	}
+
+	.CommentsList {
+		margin-left: 75px;
 	}
 }
