--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,14 @@ a {
   color: #7DC3CC; }
 
 .fk-root {
+  display: block;
+  min-height: 100px; }
+
+.fk-root div {
   display: block; }
-  .fk-root div {
-    display: block; }
-  .fk-root .fk-bubble.fk-bubble-inline {
-    display: flex; }
-  .fk-root .fk-bubble {
-    display: flex; }
+
+.fk-root .fk-bubble.fk-bubble-inline {
+  display: flex; }
+
+.fk-root .fk-bubble {
+  display: flex; }
