--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,19 @@
 .App {
-  font-family: 'Proxima-Nova', sans-serif;
+ 	font-family: 'Proxima-Nova', sans-serif;
 	flex-direction: column;
 	flex: 1;
 	.PostsList {
 		max-width: 800px;
+	}
+	.WritePost {
+		margin-top: 100px;
 	}
 }
 
 .Inner {
   margin: 0 auto;
   width: 1200px;
+  flex-direction: column;
 }
 /*
 * {
