--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,3 +2,10 @@
   background: #F1F2EE;
   height: 60px;
   flex: 1; }
+
+.Header .Inner {
+  flex-direction: row; }
+
+.Header .CurrentUserDropDown {
+  margin-left: auto;
+  align-self: center; }
