--- a/src/components/HeaderButton.css
+++ b/src/components/HeaderButton.css
@@ -9,8 +9,12 @@
   line-height: 60px;
   text-align: center;
   margin-left: 35px;
+  border: none;
+  font-size: inherit;
   cursor: pointer;
-  transition: 180ms linear all; }
-  .HeaderButton:hover {
-    color: #818181;
-    background: #F1F2EE; }
+  transition: 180ms linear all;
+  outline: none; }
+
+.HeaderButton:hover {
+  color: #818181;
+  background: #F1F2EE; }
