--- a/src/components/PostsList.css
+++ b/src/components/PostsList.css
@@ -1,13 +1,16 @@
 .PostsList {
   flex-direction: column;
-  position: relative;
+  position: relative; }
+
+.PostsList:first-child {
   padding-top: 100px; }
-  .PostsList:before {
-    position: absolute;
-    content: '';
-    background: #F1F2EE;
-    left: 32px;
-    height: 100px;
-    top: 0;
-    width: 5px;
-    z-index: -1; }
+
+.PostsList:before {
+  position: absolute;
+  content: '';
+  background: #F1F2EE;
+  left: 32px;
+  height: 100px;
+  top: 0;
+  width: 5px;
+  z-index: -1; }
