--- a/src/components/PostsList.css
+++ b/src/components/PostsList.css
@@ -1,16 +1,17 @@
 .PostsList {
-  flex-direction: column;
   position: relative; }
-
-.PostsList:first-child {
-  padding-top: 100px; }
-
-.PostsList:before {
-  position: absolute;
-  content: '';
-  background: #F1F2EE;
-  left: 32px;
-  height: 100px;
-  top: 0;
-  width: 5px;
-  z-index: -1; }
+  .PostsList > div {
+    flex: 1; }
+  .PostsList .infinite-scroll-component {
+    flex-direction: column; }
+  .PostsList:first-child {
+    padding-top: 100px; }
+  .PostsList:before {
+    position: absolute;
+    content: '';
+    background: #F1F2EE;
+    left: 32px;
+    height: 100px;
+    top: 0;
+    width: 5px;
+    z-index: -1; }
