--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -25,20 +25,35 @@
 		border-top: 5px solid #F1F2EE;
 		border-left: 5px solid #F1F2EE;
 	}
-	> div > .Avatar {
-		margin-right: 30px;
-	}
-	> div > .body {
-		flex-direction: column;
+	> header {
+		// Stick on scroll.
+		position: sticky;
+		top: 0;
 
-		> h2 {
-			margin-bottom: 0;
+		// Force appearing above comments.
+		z-index: 1;
+
+		// Adjust sizing.
+		margin-top: -15px;
+		padding: 15px 0;
+		background: #fff;
+		display: flex;
+		> .Avatar {
+			margin-right: 30px;
 		}
-		> .date {
-			margin-bottom: 15px;
-			color: #bbb;
-			font-size: 11.5px;
+		> div {
+			flex-direction: column;
+			> h2 {
+				margin-bottom: 0;
+			}
+			> .date {
+				color: #bbb;
+				font-size: 11.5px;
+			}
 		}
+	}
+	> .PostContent {
+		margin-left: 100px;
 	}
 
 	.CommentsList {
