Upgrade react-scripts

--- a/src/components/Logo.scss
+++ b/src/components/Logo.scss
@@ -1,5 +1,5 @@
 .Logo {
-	background-image: url('./../../public/logo.svg');
+	background-image: url('../logo.svg');
 	background-color: #CB4B3C;
 	background-position: center center;
 	background-repeat: no-repeat;
