--- a/src/components/HeaderButton.css
+++ b/src/components/HeaderButton.css
@@ -14,9 +14,9 @@
 	cursor: pointer;
 	transition: 180ms linear all;
 	outline: none;
+}
 
-	&:hover {
-		color: #818181;
-		background: #F1F2EE;
-	}
+.HeaderButton:hover {
+	color: #818181;
+	background: #F1F2EE;
 }
