--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,11 @@ html, body {
 	margin: 0;
 	color: #454545;
 }
+
 div {
 	display: flex;
 }
+
 a {
 	text-decoration: none;
 	color: #7DC3CC;
@@ -14,13 +16,16 @@ a {
 .fk-root {
 	display: block;
 	min-height: 100px;
-	div {
-		display: block;
-	}
-	.fk-bubble.fk-bubble-inline {
-		display: flex;
-	}
-	.fk-bubble {
-		display: flex;
-	}
+}
+
+.fk-root div {
+	display: block;
+}
+
+.fk-root .fk-bubble.fk-bubble-inline {
+	display: flex;
+}
+
+.fk-root .fk-bubble {
+	display: flex;
 }
