--- a/src/components/HeaderButton.css
+++ b/src/components/HeaderButton.css
@@ -1,22 +1,10 @@
 .HeaderButton {
-	display: block;
-	background: #EAECE6;
-	color: #BDC0B6;
-	height: 60px;
-	width: 180px;
-	text-transform: uppercase;
-	font-weight: 600;
-	line-height: 60px;
-	text-align: center;
-	margin-left: 35px;
-	border: none;
-	font-size: inherit;
-	cursor: pointer;
-	transition: 180ms linear all;
-	outline: none;
 }
 
-.HeaderButton:hover {
-	color: #818181;
-	background: #F1F2EE;
+.HeaderButton .icon {
+	margin-right: 10px;
+}
+
+.HeaderButton:hover .icon {
+	/* Make it red */
 }
