--- a/src/components/PostContent.css
+++ b/src/components/PostContent.css
@@ -1,24 +1,7 @@
 .PostContent {
 	display: block;
-	line-height: 1.9;
-	font-size: 16px;
-	font-weight: 100;
-	letter-spacing: 0.01rem;
-	color: #636462;
 	word-wrap: break-word;
 	word-break: break-word;
-}
-
-.PostContent a {
-	text-decoration: none;
-	padding-left: 2px;
-	padding-right: 2px;
-	font-weight: 200;
-	box-shadow: inset 0 17px 0 0 #fff, inset 0 -15px 0 0 rgba(125, 195, 204, 0.1);
-}
-
-.PostContent strong {
-	font-weight: 300;
 }
 
 .PostContent img {
@@ -51,16 +34,9 @@
 	margin-top: 0;
 }
 
-.PostContent h2 {
-	font-size: 32px;
-	font-weight: 500;
-	margin: 0 0 35px;
-	line-height: 60px;
-}
-
 .PostContent #hm_weekly_stats {
-	padding: 10px;
-	background: #eee;
+	padding: 1.5rem 1.5rem .75rem;
+	background: var( --hm-light-grey );
 	margin-bottom: 30px;
 }
 
