--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -53,8 +53,8 @@
 }
 
 .Post > header > .byline > .date {
-	color: #bbb;
-	font-size: 11.5px;
+	color: #AAA;
+	font-size: 14px;
 }
 
 .Post > .PostContent {
