--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -6,22 +6,25 @@
 	position: absolute;
 	content: '';
 	background: #F1F2EE;
-	left: 23px;
+	left: -35px;
 	top: 0;
 	bottom: 0;
 	width: 5px;
 	z-index: -1;
 }
 
-.Comment header {
+.Comment > header {
 	height: 50px;
 	line-height: 50px;
+	display: flex;
+	margin-left: -60px;
+	margin-bottom: 30px;
+}
+
+.Comment > header > .Avatar {
+	margin-right: 10px;
 }
 
 .Comment > .body {
 	flex-direction: column;
-}
-
-.Comment > .Avatar {
-	margin-right: 30px;
 }
