--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -5,30 +5,6 @@
 	min-height: 144px;
 }
 
-.Post:before {
-	position: absolute;
-	content: '';
-	left: 32px;
-	top: 70px;
-	height: 40px;
-	width: 40px;
-	border-radius: 0 0 0 40px;
-	border-left: 5px solid #F1F2EE;
-	border-bottom: 5px solid #F1F2EE;
-}
-
-.Post:after {
-	position: absolute;
-	content: '';
-	left: 32px;
-	bottom: 0px;
-	height: 40px;
-	width: 40px;
-	border-radius: 40px 0 0 0;
-	border-top: 5px solid #F1F2EE;
-	border-left: 5px solid #F1F2EE;
-}
-
 .Post > header {
 	position: sticky;
 	top: 0;
@@ -49,7 +25,7 @@
 }
 
 .Post > header > .byline > h2 {
-	margin-bottom: 0;
+	margin: 0;
 }
 
 .Post > header > .byline > .date {
@@ -62,5 +38,5 @@
 }
 
 .Post .CommentsList {
-	margin-left: 75px;
+	margin-left: 160px;
 }
