--- a/src/components/HeaderButton.css
+++ b/src/components/HeaderButton.css
@@ -20,10 +20,19 @@
 	opacity: 0.5;
 }
 
-.HeaderButton:hover {
+.HeaderButton:hover,
+.HeaderButton:focus {
 	color: var( --hm-dark-grey );
 }
 
-.HeaderButton:hover .icon {
+.HeaderButton:focus {
+	outline: 1px solid var( --hm-dark-grey );
+}
+.HeaderButton:active {
+	outline: 1px solid var( --hm-red );
+}
+
+.HeaderButton:hover .icon,
+.HeaderButton:focus .icon {
 	opacity: 1;
 }
