Drop opacity on new reaction button

--- a/src/components/Reactions.css
+++ b/src/components/Reactions.css
@@ -12,6 +12,10 @@
 	position: relative;
 }
 
+.reactions .reactions-new {
+	opacity: 0.4;
+}
+
 .reactions .emoji-mart {
 	position: absolute;
 	top: 100%;
