--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -19,6 +19,9 @@
 	display: flex;
 	margin-left: -60px;
 	margin-bottom: 10px;
+	position: sticky;
+	top: 110px;
+	background: #fff;
 }
 
 .Comment > header > .Avatar {
