--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -64,6 +64,16 @@
 	margin-left: 0.5rem;
 }
 
+.Editor .DropUpload {
+	margin-bottom: 1.66667rem;
+}
+.Editor .DropUpload-status {
+	border: 2px solid #d9d9d9;
+	border-top-style: dashed;
+	padding: 0.2em 9px;
+	background: var( --hm-light-grey );
+}
+
 .Editor-editor {
 	margin-top: 0;
 	min-height: 5rem;
@@ -71,7 +81,9 @@
 	resize: vertical;
 	border-top-left-radius: 0;
 	border: 2px solid #d9d9d9;
+	border-bottom: none;
 	background-color: #fff;
+	margin-bottom: 0;
 }
 
 .Editor-preview {
