--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -70,6 +70,8 @@
 .Editor .DropUpload-status {
 	border: 2px solid #d9d9d9;
 	border-top-style: dashed;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
 	padding: 0.2em 9px;
 	background: var( --hm-light-grey );
 }
