--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,10 +1,21 @@
 .Post {
 	flex-direction: column;
 	position: relative;
-	padding-bottom: 20px;
-	margin-bottom: 35px;
+	padding-bottom: 1.667rem;
+	margin-bottom: 1.667rem;
 	min-height: 144px;
 	border-bottom: 5px solid #F1F2EE;
+}
+
+.Post:before {
+	position: absolute;
+	content: '';
+	background: #F1F2EE;
+	left: 27.5px;
+	height: 1.667rem;
+	top: -.8335rem;
+	width: 5px;
+	z-index: 2;
 }
 
 .Post > header {
@@ -16,11 +27,15 @@
 	background: #fff;
 	display: flex;
 	align-items: center;
-	height: 110px;
+	height: 99px;
 }
 
 .Post > header > .Avatar {
 	margin-right: 30px;
+	width: 3.333rem;
+	height: 3.333rem;
+	border-radius: 100%;
+	align-self: flex-start;
 }
 
 .Post > header > .byline {
@@ -51,5 +66,5 @@
 }
 
 .Post > .PostContent {
-	margin-left: 100px;
+	margin-left: 90px;
 }
