Add initial styles for sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,20 @@
 	max-width: 800px;
 }
 
-.Inner {
+.Outer {
 	margin: 0 auto;
-	flex-direction: column;
+	display: flex;
 	max-width: 1200px;
+}
+
+.Inner {
+	flex-direction: column;
+}
+
+.Sidebar {
+	position: sticky;
+	top: 0;
+	height: 100vh;
+	margin-left: 4rem;
+	overflow: scroll;
 }
