--- a/src/components/Reactions.css
+++ b/src/components/Reactions.css
@@ -2,15 +2,15 @@
 	position: relative;
 	width: 100%;
 	display: flex;
-	margin: 30px 0 30px 90px;
+	margin: 1.666rem 0 1.248rem 90px;
 }
 
 .reactions .btn {
 	white-space: nowrap;
-	margin-bottom: 0;
 	height: 31px;
 	position: relative;
 	border-color: #a3a3a3;
+	margin-bottom: .416665rem;
 }
 
 .reactions .reactions-new {
