--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -75,13 +75,17 @@
 	padding: 0.2em 9px;
 	background: var( --hm-light-grey );
 }
+.Editor.previewing .DropUpload-status {
+	display: none;
+}
 
 .Editor-editor {
 	margin-top: 0;
 	min-height: 5rem;
 	max-height: 30rem;
 	resize: vertical;
-	border-top-left-radius: 0;
+	border-radius: 0;
+	border-top-right-radius: 4px;
 	border: 2px solid #d9d9d9;
 	border-bottom: none;
 	background-color: #fff;
