--- a/src/components/Editor.css
+++ b/src/components/Editor.css
@@ -65,7 +65,7 @@
 }
 
 .Editor .DropUpload {
-	margin-bottom: 1.66667rem;
+	margin-bottom: 1rem;
 }
 .Editor .DropUpload-status {
 	border: 2px solid #d9d9d9;
@@ -107,6 +107,7 @@
 	align-items: center;
 }
 
-.Editor-submit-buttons .Button {
+.Editor-submit-buttons .btn {
 	margin-left: 0.5rem;
+	margin-bottom: 0;
 }
