--- a/src/components/WriteComment.css
+++ b/src/components/WriteComment.css
@@ -1,14 +1,26 @@
 .WriteComment {
-	background-color: var( --hm-light-grey );
-	padding: 20px;
+
 }
 
 .WriteComment > header {
 	height: 50px;
 	line-height: 50px;
 	display: flex;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
+	margin-left: -60px;
 }
+/*
+.Comment > header {
+	height: 50px;
+	line-height: 50px;
+	display: flex;
+	
+	margin-bottom: 10px;
+	position: sticky;
+	top: 99px;
+	background: #fff;
+}
+*/
 
 .WriteComment > header > .Avatar {
 	margin-right: 10px;
