--- a/src/components/CurrentUserDropDown.css
+++ b/src/components/CurrentUserDropDown.css
@@ -1,9 +1,27 @@
 .CurrentUserDropDown {
-	align-items: center;
+	margin-left: 20px;
+}
+
+.CurrentUserDropDown .Dropdown-trigger {
 	display: flex;
-	margin-right: 20px;
+	align-items: center;
+	padding: 7px 0.5em;
 }
 
 .CurrentUserDropDown .Avatar {
 	margin-left: 10px;
+}
+
+.CurrentUserDropDown-items {
+	list-style: none;
+	margin: 0;
+	padding: 0 0.5em;
+}
+
+.CurrentUserDropDown-items button {
+	background: transparent;
+	border: none;
+	display: block;
+	cursor: pointer;
+	padding: 0;
 }
