--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -53,3 +53,11 @@
 	flex-direction: column;
 	padding-bottom: 1rem;
 }
+
+.Comment  > header > .actions {
+	display: none;
+}
+
+.Comment:hover > header > .actions {
+	display: block;
+}
