--- a/src/components/PostContent.css
+++ b/src/components/PostContent.css
@@ -31,6 +31,13 @@
 	margin-right: auto;
 }
 
+.PostContent blockquote {
+	font-size: inherit;
+	border-left: 6px solid #f5f5f5;
+	color: #847F7F;
+	padding-left: 15px;
+}
+
 .PostContent > *:first-child {
 	margin-top: 0;
 }
