--- a/src/components/Avatar.css
+++ b/src/components/Avatar.css
@@ -5,7 +5,7 @@
 .Avatar img {
 	max-width: initial;
 	border-radius: 100%;
-	background-color: #FFF;
+	background-color: #eee;
 }
 
 .Avatar:after {
