--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,6 +9,10 @@
 	padding: 0 20px;
 }
 
+.Header .Inner a:hover {
+	border: none;
+}
+
 .Header .CurrentUserDropDown {
 	margin-left: auto;
 	align-self: center;
