Revert "Add theme support for the title tag."
This reverts commit 34154f978747dba80db5a386b2b3215454b5df1b.

--- a/src/components/Avatar.css
+++ b/src/components/Avatar.css
@@ -5,7 +5,7 @@
 .Avatar img {
 	max-width: initial;
 	border-radius: 100%;
-	background-color: #eee;
+	background-color: #FFF;
 }
 
 .Avatar:after {
