--- a/src/components/Status.css
+++ b/src/components/Status.css
@@ -15,17 +15,12 @@
 	z-index: -1;
 }
 
-.Status > div {
-	flex-direction: row;
-	display: flex;
-}
-
 .Status > div > .Avatar {
 	margin-right: 35px;
 	margin-left: 10px;
 }
 
-.Status .body p:first-of-type {
+.Status .PostContent p:first-of-type {
 	display: inline;
 }
 
