--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,6 @@
 	flex: 1;
 }
 
-.App .PostsList {
-	max-width: 800px;
-}
-
 .App .WritePost {
 	margin: 20px;
 	max-width: 800px;
@@ -21,15 +17,19 @@
 
 .Inner {
 	flex-direction: column;
+	width: 65%;
+	max-width: 800px;
 }
 
 .Sidebar {
 	position: sticky;
 	top: 0;
 	height: 100vh;
-	margin-left: 4rem;
+	margin-left: 5%;
 	overflow: hidden;
 	overflow-y: scroll;
+	width: 30%;
+	flex-shrink: 0;
 }
 .App a {
 	border: none;
