--- a/src/components/CurrentUserDropDown.css
+++ b/src/components/CurrentUserDropDown.css
@@ -1,9 +1,37 @@
-.CurrentUserDropDown {
-	align-items: center;
-	display: flex;
-	margin-right: 20px;
+.CurrentUserDropDown .Dropdown-trigger {
+	padding: 7px 0;
 }
 
-.CurrentUserDropDown .Avatar {
-	margin-left: 10px;
+.CurrentUserDropDown .Dropdown-content {
+	width: 20rem;
+	margin-top: 0;
+	margin-right: -0.5em;
+	padding: 1em;
+}
+
+.CurrentUserDropDown.expanded .Dropdown-content {
+	display: flex;
+}
+
+.CurrentUserDropDown .Dropdown-content > :nth-child( 2 ) {
+	margin-left: 5%;
+	flex-grow: 1;
+}
+
+.CurrentUserDropDown p {
+	margin: 0.25em 0 0.5em;
+}
+
+.CurrentUserDropDown-name {
+	font-size: 1.25rem;
+}
+
+.CurrentUserDropDown-items {
+	list-style: none;
+	margin: 1em 0;
+	padding: 0;
+}
+
+.CurrentUserDropDown button {
+	margin-bottom: 0;
 }
