--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -34,6 +34,7 @@
 	height: 50px;
 	line-height: 40px;
 	display: flex;
+	align-items: flex-start;
 	margin-left: -30px;
 	position: sticky;
 	top: 99px;
@@ -56,8 +57,13 @@
 
 .Comment  > header > .actions {
 	display: none;
+	align-items: center;
 }
 
 .Comment:hover > header > .actions {
-	display: block;
+	display: flex;
+}
+
+.Comment > header button {
+	margin-bottom: 0;
 }
