--- a/src/components/Message/Reactions.css
+++ b/src/components/Message/Reactions.css
@@ -2,7 +2,7 @@
 	position: relative;
 	width: 100%;
 	display: flex;
-	margin: 1.666rem 0 1.248rem 90px;
+	margin: 1.666rem 0 1.248rem;
 }
 
 .reactions .btn {
