--- a/src/components/Post/Write.css
+++ b/src/components/Post/Write.css
@@ -42,6 +42,8 @@
 	border-radius: inherit;
 	margin: 0;
 	width: 100%;
+	border: 2px solid rgba( 217, 217, 217, 0.6 );
+	padding: 0.2em;
 }
 
 .WritePost > header > .byline > h2 > input::placeholder {
