Don't allow headers to text-wrap

--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -45,6 +45,8 @@
 	flex-direction: column;
 	flex-grow: 1;
 	min-width: 0;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .Post > header > .byline > a > h2 {
