--- a/src/components/CommentsList.css
+++ b/src/components/CommentsList.css
@@ -14,3 +14,12 @@
 .CommentThread {
 	margin-left: 60px;
 }
+
+@media ( max-width: 600px ) {
+	.CommentsList {
+		margin-left: 48px;
+	}
+	.CommentsList .CommentsList {
+		margin-left: 32px;
+	}
+}
