--- a/src/components/Header/HeaderButton.css
+++ b/src/components/Header/HeaderButton.css
@@ -14,6 +14,10 @@
 	outline: none;
 }
 
+.HeaderButton + .HeaderButton {
+	border-left: 1px solid rgba(0,0,0,0.05);
+}
+
 .HeaderButton .icon {
 	margin-right: 10px;
 	margin-left: -0.5em;
