Realign initial line from header

--- a/src/components/Post/List.css
+++ b/src/components/Post/List.css
@@ -29,3 +29,10 @@
 .PostsList > .pagination {
 	border-top: none;
 }
+
+@media ( max-width: 600px ) {
+	.PostsList:before {
+		left: 35px;
+		width: 2px;
+	}
+}
