Update error style to match UI kit

--- a/src/components/Post/Write.css
+++ b/src/components/Post/Write.css
@@ -61,13 +61,15 @@
 	font-size: 14px;
 }
 
-.WritePost-title-warn {
-	background: var( --hm-red );
-	color: #fff;
+.WritePost-error {
+	background: #FFF2F4;
+	color: #FF001F;
+	border: 1px solid #FF001F;
+	border-radius: 4px;
 	margin-left: 90px;
 	margin-top: -1.36667rem;
-	padding: 0.5em 5px;
-	border-radius: 4px;
+	padding: 1.1em;
+	font-size: 0.777777778em;
 }
 
 .WritePost > .Editor {
