Make hovercards more useful

--- a/src/components/Hovercard.css
+++ b/src/components/Hovercard.css
@@ -23,7 +23,9 @@
 }
 
 .Hovercard-Transition-enter {
-	animation: hovercard-fade-in-up 0.1s ease forwards;
+	opacity: 0;
+	transform: translate(0, 20px);
+	animation: hovercard-fade-in-up 0.1s 0.5s ease forwards;
 }
 
 .Hovercard-Transition-exit {
