--- a/src/components/Hovercard.css
+++ b/src/components/Hovercard.css
@@ -37,9 +37,8 @@
 	z-index: 99;
 	background: #fff;
 	color: #000;
-	border: 1px solid var( --hm-red );
-	box-shadow: 1px 1px 4px rgba( 0, 0, 0, 0.4 );
-	padding: 16px;
+	box-shadow: 0px 0px 4px rgba( 0, 0, 0, 0.4 );
+	padding: 0.777778rem;
 	margin-top: 10px; /* ::before[height] + offset */
 	font-size: 1rem;
 	pointer-events: none;
